# rust-space-shooter

./: .gitignore  Cargo.toml  README.md  index.html  run-wasm.sh  rust-space-shooter.js  rust-space-shooter.wasm
.github/workflows/: deploy.yml
assets/: background_shader.frag  background_shader.vert  basic_shader.frag  test_shader.frag
src/: audio.rs  background.rs  collisions.rs  components.rs  enemies.rs  explosion.rs  game.rs  game_over.rs  game_state.rs  main.rs  main_menu.rs  old_main.rs  particle_effects.rs  paused.rs  player.rs  powerups.rs  resources.rs  scoreboard.rs  settings.rs  sprite_animation.rs  starfield.frag  theme.rs  throttler.rs
src/hud/: hud.rs
src/menu/: main_menu.rs  menu.rs  mod.rs  settings.rs  utils.rs
