[package]
name = "rust-space-shooter"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.15.0", features = ["file_watcher", "shader_format_glsl", "wav"]}
bevy_dev_tools = "0.15.0"
bevy_rand = { version = "0.8.0", features = ["wyrand"] }
# macroquad = { version = "0.4.13", features = ["audio"] }
# macroquad-particles = "0.2.2"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.5"

[features]
bevy_debug_stepping = ["bevy/bevy_debug_stepping"]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.dev]
opt-level = 1

[profile.dev.package.'*']
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
